Make dialog.close() a no-op when already closed

This matches the standard:
https://html.spec.whatwg.org/multipage/interactive-elements.html#close-the-dialog

https://crbug.com/761790 was filed about the fact that we appear to
have a much better test suite for <dialog> than exists in
web-platform-tests.

Drive-by: resolve the FIXME about default argument value for close(),
and remove the stale FIXME that is no longer correct.

Bug: 638943
Change-Id: I82743f7d725ed85c42c9e349b669f098b5a3e10d
Reviewed-on: https://chromium-review.googlesource.com/648980
Reviewed-by: Kent Tamura <tkent@chromium.org>
Commit-Queue: Philip Jägenstedt <foolip@chromium.org>
Cr-Commit-Position: refs/heads/master@{#499581}
Former-commit-id: ad699f89ba8bc3c0bbbc61c122df8c632aa3a5cf